rspec with rswag setup, init kamal with pgsql and sidekiq, refactorize observers, fix migrations 60%
